changing java version to 1.8